--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.33.1",
     "react-scripts": "4.0.0",
     "three": "^0.126.1",
     "vanta": "^0.5.21",
@@ -27,6 +28,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "pre-commit": [
+    "pretty"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
