feat: add pre commit hook

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "pre-commit": "^1.2.2",
     "prettier": "^2.2.1"
   },
   "homepage": "https://aandrys.github.io/Portfolio2"
