--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.1.0",
     "gsap": "^3.6.0",
     "react": "^17.0.1",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.33.1",
     "react-scripts": "4.0.0",
