--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.33.1",
     "react-scripts": "4.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "three": "^0.126.1",
     "vanta": "^0.5.21",
     "web-vitals": "^0.2.4"
