--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.1.0",
     "gsap": "^3.6.0",
+    "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.1",
     "react-countup": "^6.1.1",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.33.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "three": "^0.126.1",
@@ -68,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-node": "^11.1.0",
