--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.1.0",
     "gsap": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.1",
     "react-countup": "^6.1.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.28.1",
