--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gh-pages": "^3.1.0",
     "gsap": "^3.6.0",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.1",
     "react-countup": "^6.1.1",
