--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
     "prettier": "^2.7.1"
   },
   "prettier-format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-  "homepage": "https://aandrys.github.io/Portfolio2"
+  "homepage": "https://aandrys.github.io/portfolio"
 }
