--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,13 +28,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm install
+      run: yarn
 
     - name: Run the tests
-      run: npm test
+      run: yarn test
 
     - name: Build
-      run: npm run build
+      run: yarn build
       
     - name: Deploy
       run: |
