--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
     - name: Checkout repository
@@ -28,13 +28,13 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: yarn
+      run: npm install
 
     - name: Run the tests
-      run: yarn test
+      run: npm run test
 
     - name: Build
-      run: yarn build
+      run: npm run build
       
     - name: Deploy
       run: |
