--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,3 +46,4 @@ jobs:
           user_email: 'github-actions[bot]@users.noreply.github.com'
           github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
           repository: ${{ github.repository }}
+          CI: false
