--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,11 +11,11 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout repository
@@ -32,8 +32,8 @@ jobs:
       - name: Run the tests
         run: npm run test
 
-      - name: Update
-        run: npm update
+      - name: Ins
+        run: npm install webpack5 -g
 
       - name: Build
         run: npm run build
