--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,11 +15,16 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [14.x]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          lfs: true
+          
+      - name: Checkout LFS objects
+        run: git lfs checkout
 
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -31,9 +36,6 @@ jobs:
 
       - name: Run the tests
         run: npm run test
-
-      - name: Ins
-        run: npm install webpack5 -g
 
       - name: Build
         run: npm run build
